<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:background="@color/brown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/our_mission"
            android:padding="@dimen/padding_x2"
            android:textSize="@dimen/font_size"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tvmission"
            style="@style/text_date"
            android:text="@string/our_mission_msg"
            android:padding="@dimen/padding_x2"
            android:textColor="@color/mytheme_primary"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_x2"
            android:textSize="@dimen/font_size"
            android:text="@string/what_we_do"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            style="@style/text_date"
            android:text="@string/what_we_do_msg"
            android:padding="@dimen/padding_x2"
            android:textColor="@color/mytheme_primary"/>
        <!-- <ImageView
             android:id="@+id/about_img"
             android:layout_width="match_parent"
             android:layout_height="@dimen/logo_size"
             android:padding="@dimen/padding_x2"
             />-->
        <TextView
            android:layout_margin="@dimen/margin_x"
            android:textSize="@dimen/font_size"
            android:gravity="center"
            android:text="@string/about_us_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:padding="@dimen/padding_x2"
                android:background="@drawable/form_edit_text_bg"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_gravity="center"
                    android:textColor="@color/blue_aboutUs"
                    android:textSize="@dimen/font_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dr_1"/>
                <TextView
                    android:layout_gravity="center"
                    android:textSize="@dimen/font_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/position_1"/>

            </LinearLayout>
            <LinearLayout
                android:padding="@dimen/padding_x2"
                android:background="@drawable/form_edit_text_bg"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_gravity="center"
                    android:textColor="@color/blue_aboutUs"
                    android:textSize="@dimen/font_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dr_2"/>
                <TextView
                    android:layout_gravity="center"
                    android:textSize="@dimen/font_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/position_2"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/margin_x"
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:padding="@dimen/padding_x2"
                android:background="@drawable/form_edit_text_bg"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_gravity="center"
                    android:textColor="@color/blue_aboutUs"
                    android:textSize="@dimen/font_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dr_3"/>
                <TextView
                    android:layout_gravity="center"
                    android:textSize="@dimen/font_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/position_3"/>

            </LinearLayout>
            <LinearLayout
                android:padding="@dimen/padding_x2"
                android:background="@drawable/form_edit_text_bg"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_gravity="center"
                    android:textColor="@color/blue_aboutUs"
                    android:textSize="@dimen/font_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dr_4"/>
                <TextView
                    android:layout_gravity="center"
                    android:textSize="@dimen/font_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/position_4"/>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>
