
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_below="@+id/authToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent90"
            android:orientation="vertical"
            android:gravity="center">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_x"
                android:background="@drawable/form_edit_text_bg"
                android:orientation="vertical">
                <ImageView
                    android:layout_margin="@dimen/margin_x"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/logo"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/view_width"
                    android:background="@color/gray_999"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_x"
                    android:orientation="vertical">

                    <TextView
                        style="@style/LayoutHeadings"
                        android:text="@string/authoriseMsg"
                        android:layout_weight="1"/>
                   <!-- <TextView
                        android:id="@+id/mobNoEnds"
                        style="@style/text_date"/>-->
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/padding_x2"
                    android:padding="@dimen/margin_x">
                    <TextView
                        style="@style/textViewStyle"
                        android:text="@string/enterOTP"
                        android:textColor="@color/black"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <EditText
                            android:id="@+id/et_otp_field"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/spinnerHeight"
                            android:layout_margin="@dimen/margin_x"
                            android:layout_weight="1.5"
                            android:background="@drawable/form_edit_text_bg"
                            android:hint="......"
                            android:inputType="number"
                            android:maxLength="6"
                            android:gravity="center" />
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:layout_margin="@dimen/margin_x"
                            android:background="@color/red">
                            <Button
                                android:id="@+id/otp_button"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/spinnerHeight"
                                android:background="@color/insta_blue_bg"
                                android:textColor="@color/white"
                                android:textStyle="bold"
                                android:text="@string/submit"/>
                        </LinearLayout>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="@dimen/cardElevation"
                        android:weightSum="2">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">
                            <TextView
                                android:id="@+id/tv_resend"
                                style="@style/textViewStyle"
                                android:text="@string/recendOTP"
                                android:gravity="right"
                                android:textColor="@color/insta_blue_bg"
                                android:padding="@dimen/padding_x2"/>
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/cardElevation"
                                android:visibility="gone"

                                android:gravity="right">
                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="@dimen/view_width"
                                    android:background="@color/black"
                                    />

                            </LinearLayout>
                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/cardElevation"
                    android:background="@color/gray_999"/>


                <TextView
                    android:textSize="@dimen/font_size"
                    android:id="@+id/textView4"
                    android:paddingRight="@dimen/padding_x2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/cancelMsg2" />

            </LinearLayout>

        </LinearLayout>


