<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:background="@color/black"
    android:theme="@style/AppTheme"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/llfirst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/form_edit_text_bg"
        android:layout_margin="@dimen/padding_x"
        android:visibility="visible">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/textView8"
                    style="@style/LayoutHeadings"
                    android:text="Change Password"
                    android:layout_weight="1"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Enter a combination of atleast six numbers, letters and punctuation marks."
            android:gravity="center_horizontal"
            android:id="@+id/textView2"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_x"
            android:layout_marginBottom="@dimen/margin_x"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/form_edit_text_bg"
            android:layout_marginLeft="@dimen/margin_x"
            android:layout_marginRight="@dimen/margin_x"


            android:padding="0dp">
            <TextView
                android:id="@+id/tvcp"
                android:layout_width="@dimen/editTextHeight"
                style="@style/faiStyles"
                android:text="@string/fai_phNo"
                android:textColor="@color/insta_blue_bg"/>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <EditText
                    android:id="@+id/et_confps"
                    style="@style/TextInputLayoutStyle"
                    android:hint="Current Password"
                    android:paddingLeft="@dimen/padding_x2"
                    android:gravity="start|center_vertical"
                    />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/form_edit_text_bg"
            android:layout_marginLeft="@dimen/margin_x"
            android:layout_marginRight="@dimen/margin_x"
            android:layout_marginTop="@dimen/margin_x"
            android:layout_marginBottom="@dimen/margin_x"
            android:padding="0dp">
            <TextView
                android:id="@+id/tvNP"
                android:layout_width="@dimen/layoutHeadings"
                style="@style/faiStyles"
                android:text="@string/fai_lock"
                android:textColor="@color/insta_blue_bg"/>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <EditText
                    android:id="@+id/et_newPsw"
                    style="@style/TextInputLayoutStyle"
                    android:hint="New Password"
                    android:paddingLeft="@dimen/padding_x2"
                    android:gravity="start|center_vertical"
                    />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/form_edit_text_bg"
            android:layout_marginLeft="@dimen/margin_x"
            android:layout_marginRight="@dimen/margin_x"
            android:layout_marginBottom="@dimen/margin_x"

            android:padding="0dp">
            <TextView
                android:id="@+id/tvCNP"
                android:layout_width="@dimen/spinnerHeight"
                style="@style/faiStyles"
                android:text="@string/fai_lock"
                android:textColor="@color/insta_blue_bg"/>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/et_confNewpsw"
                    style="@style/TextInputLayoutStyle"
                    android:hint="Confirm Password"
                    android:paddingLeft="@dimen/padding_x2"
                    android:gravity="start|center_vertical"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <Button
                android:id="@+id/changePSWSubmit"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/submit" />
        </LinearLayout>



    </LinearLayout>

</LinearLayout>
